# UnrealEngine

./: README.md
0x00-C++Modern-Review_Unreal_Basics/: .gitignore  CMakeLists.txt  Makefile  README.md  SmartPointers.cpp  SmartPointers.h  main.cpp  setup_cpp_project.sh
0x00-C++Modern-Review_Unreal_Basics/include/: Enemy.h  Material.h  Player.h  Texture.h  Weapon.h
0x00-C++Modern-Review_Unreal_Basics/src/: Enemy.cpp  Material.cpp  Player.cpp  Texture.cpp  Weapon.cpp  main.cpp
MetaHumans/: MetaHumans.uproject
MetaHumans/Config/: DefaultEngine.ini  DefaultGame.ini
MetaHumans/Content/: BP_Character.uasset
MetaHumans/Content/FirstPerson/Blueprints/: BP_FirstPersonCharacter.uasset
MetaHumans/Content/MetaHumans/Common/Blanks/: T_Default_BaseColor_White.uasset  T_Default_Masks_SpecRoughMetal.uasset  T_Default_NormalMap.uasset
MetaHumans/Content/MetaHumans/Common/Common/: Face_Archetype_LODSettings_Cinematic.uasset  MetaHuman_Clothing_LODSettings_Cinematic.uasset  MetaHuman_LODSettings_Cinematic.uasset  metahuman_proc_ControlRig.uasset  ragdoll_physMat.uasset
MetaHumans/Content/MetaHumans/Common/Controls/: MHGizmoLibrary.uasset  M_RigControlActor_Black.uasset  convergence_3l.uasset  faceboard_2x.uasset  faceboard_followGrp.uasset
MetaHumans/Content/MetaHumans/Common/Face/: Face_AnimBP.uasset  Face_Archetype_Physics.uasset  Face_Archetype_Skeleton.uasset  Face_PostProcess_AnimBP.uasset  HeadMovementIK_Proc_CtrlRig.uasset  Neck_CtrlRig.uasset
MetaHumans/Content/MetaHumans/Vivian/: BP_Vivian.uasset
(+430 files in other folders)
